--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,63 @@ body {
 .login-form .form-group .btn:hover {
   background: #0056b3;
 }
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: #2c2f33;
+  height: 100vh;
+  width: 80px;
+}
+
+.sidebar-item {
+  margin-bottom: 20px;
+}
+
+.message-icon,
+.create-server-icon {
+  font-size: 24px;
+  color: #ffffff;
+  background-color: #7289da;
+  border-radius: 50%;
+  padding: 10px;
+  text-align: center;
+  line-height: 24px;
+}
+
+.servers-list {
+  width: 100%;
+}
+
+.server-item {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.server-item a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.create-server {
+  position: absolute;
+  bottom: 20px;
+}
+
+.create-server-icon {
+  font-size: 24px;
+  color: #ffffff;
+  background-color: #43b581;
+  border-radius: 50%;
+  padding: 10px;
+  text-align: center;
+  line-height: 24px;
+}
+
+hr {
+  width: 100%;
+  border: 1px solid #99aab5;
+  margin: 20px 0;
+}
